# sdk_customer

customer/: common.config
customer/src/mps_atcmd_test/: Makefile  mps_atcmd_test.c  mps_atcmd_test.h
customer/src/mps_qmi_test/: Makefile.am  configure.ac  gms.c  gms.h  mps_qmi_test.c  mps_qmi_test.h  mps_qmi_test.pc.in
customer/src/mps_tns/: Makefile.am  configure.ac  mps_tns.c  mps_tns.h  mps_tns.pc.in  mps_tns_config.c
customer/src/nas_nr5g_indications/: Makefile.am  SDD_nas_nr5g_indications.md  configure.ac  nas_nr5g_indications.c  nas_nr5g_indications.h  nas_nr5g_indications.pc.in  nas_nr5g_indications_config.c
